[package]
name = "centerpiece"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# application window
iced = { version = "0.10.0", features = ["svg"] }

# plugin system
async-trait = "0.1.73"

# search
fuzzy-matcher = "0.3.7"

# clock plugin
async-std = "1.12.0"
chrono = "0.4.26"

# applications plugin
freedesktop-desktop-entry = "0.5.0"

# windows plugin
swayipc = "3.0.1"
