[package]
name = "centerpiece"
description = "Your trusty omnibox search."
version.workspace = true
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
log = { version = "0.4.22", features = ["kv_unstable_serde"] }
simple_logger = { version = "5.0.0", features = [
  "colors",
  "threads",
  "timestamps",
  "stderr",
] }
serde = { version = "1.0.217", features = ["derive"] }

# settings
serde_yaml = "0.9.34"

# application window
iced = { version = "0.13.1", features = ["svg"] }
iced_layershell = "0.12.0"

hex_color = "3"

# plugins
async-trait = "0.1.83"
async-std = "1.12.0"

# reading index files
serde_json = "1.0.133"

# clock plugin
chrono = "0.4.38"

# applications plugin
freedesktop-desktop-entry = "0.5.1"

# sway_windows plugin
swayipc = "3.0.1"

# system monitor plugin
sysinfo = "0.30.5"
battery = "0.7.8"

# brave history
sqlite = "0.36.1"

# wifi
networkmanager = "0.4.1"
dbus = "0.9.7"

# firefox bookmarks
serde_ini = "0.2.0"
iced_runtime = "0.13.2"
systemstat = "0.2.4"
