[package]
name = "centerpiece"
description = "Your trusty omnibox search."
version.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
settings = { path = "../settings" }
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
log = { version = "0.4.22", features = ["kv_unstable_serde"] }
simple_logger = { version = "5.0.0", features = [
  "colors",
  "threads",
  "timestamps",
  "stderr",
] }
serde = { version = "1.0.217", features = ["derive"] }

# settings
serde_yaml = "0.9.34"

# application window
egui = { version = "0.33.3", features = ["color-hex"] }
wayapp = "0.2.1"
smithay-client-toolkit = "0.20.0"

# plugins
async-trait = "0.1.89"
smol = "2"
async-channel = "2"
futures-lite = "2"

# reading index files
serde_json = "1.0.139"

# clock plugin
chrono = "0.4.43"

# applications plugin
freedesktop-desktop-entry = "0.7.18"

# sway_windows plugin
swayipc = "3.0.3"

# system monitor plugin
sysinfo = "0.35.2"
battery = "0.7.8"

# brave history
sqlite = "0.36.1"

# wifi
networkmanager = "0.4.1"
dbus = "0.9.7"

# firefox bookmarks
serde_ini = "0.2.0"
systemstat = "0.2.4"

# fuzzy matcher
nucleo-matcher = "0.3.1"
