[package]
name = "settings"
edition.workspace = true
version.workspace = true

[dependencies]
log = { version = "0.4.22", features = ["kv_unstable_serde"] }
anyhow = "1.0.100"

serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
egui = { version = "0.31.1", features = ["color-hex"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
