[package]
name = "index-git-repositories"
version.workspace = true
edition = "2021"

[dependencies]
log = { version = "0.4.22", features = ["kv_unstable_serde"] }
simple_logger = { version = "4.3.3", features = [
  "colors",
  "threads",
  "timestamps",
  "stderr",
] }

serde_json = "1.0.119"
rust_search = "2.0.0"
anyhow = "1.0.86"
