[package]
name = "index-git-repositories"
version.workspace = true
edition = "2021"

[dependencies]
settings = { path = "../../settings" }
log = { version = "0.4.22", features = ["kv_unstable_serde"] }
simple_logger = { version = "5.0.0", features = [
  "colors",
  "threads",
  "timestamps",
  "stderr",
] }

serde_json = "1.0.127"
rust_search = "2.0.0"
anyhow = "1.0.86"
